--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,10 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "get-port": "^4.2.0",
+    "loglevel": "^1.7.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ws": "^7.5.0"
   }
 }
