--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/ws": "^7.4.5",
     "electron": "^13.1.2",
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.3.4"
