--- a/app/package.json
+++ b/app/package.json
@@ -2,22 +2,31 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "./build-main/main/index.js",
+  "main": "./dist/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:renderer": "parcel src/renderer/index.html --dist-dir build-renderer",
-    "dev:main": "tsc -p . -w",
+    "dev:style": "tailwindcss -i src/renderer/style.css -c ./tailwind.config.js -o src/renderer/tailwind.css --watch",
+    "dev:renderer": "parcel src/renderer/index.html --target renderer",
+    "dev:main": "tsc -p ./tsconfig.main.json -w",
     "dev:start": "electron ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Felipe Soares Gonçalves Rosa <felipe.sgrosa@gmail.com>",
+  "license": "MIT",
+  "targets": {
+    "renderer": {
+      "context": "electron-renderer"
+    }
+  },
   "devDependencies": {
+    "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/ws": "^7.4.5",
     "electron": "^13.1.2",
-    "parcel": "^2.0.0-beta.2",
+    "parcel": "^2.0.0-beta.3.1",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.2",
     "typescript": "^4.3.4"
   },
   "dependencies": {
