Challenge peers and accept challenges through the app (#11)

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,3 +1,7 @@
 daemon-bin:
+	cd ../daemon && cargo build
+	cp ../daemon/target/debug/daemon ./ipchessd
+
+daemon-bin-relase:
 	cd ../daemon && cargo build --release
 	cp ../daemon/target/release/daemon ./ipchessd
